fixed flex wrap

--- a/gradient-borders-glowing-cards/style.css
+++ b/gradient-borders-glowing-cards/style.css
@@ -19,6 +19,9 @@ body {
   display: flex;
   justify-content: center;
   align-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
 }
 .box {
   position: relative;
